--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <link
-    href="https://fonts.googleapis.com/css2?
-    family=Montserrat:wght@400;500;600;700&display=swap"
-    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
   />
+
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/" />
+ 
   <link rel="stylesheet" href="./styles.css" />
-    <title>Мир Красоты</title>
+   
+  <title>Мир Красоты</title>
   </head>
   <body>
     <header class="header">
