--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
     <title>Мир Красоты</title>
   </head>
   <body>
@@ -86,11 +86,23 @@
               Вами и для Вас.
             </p>
           </div>
-          <img
-            class="about__video"
-            src="./images/Section/video.png"
-            alt="video"
-          />
+          <div class="about__video">
+            <div class="about__video-description">
+              <img src="./images/Section/iconPlay 1.svg" alt="">
+
+              <span>
+                Короткое видео о нас
+              </span>
+            </div>
+
+            <img
+              class="about__video-image"
+              src="./images/Section/video.png"
+              alt="video"
+            />  
+          </div>
+          
+
         </div>
         <div class="about__cards">
           <div class="card">
@@ -239,69 +251,71 @@
             </li>
           </ul>
         </nav>
-        <div class="price-top">
-          <div class="price__list">
-            <div class="price">
-              <h3 class="price__heading">Женская стрижка</h3>
-              <p class="price__description">Короткие волосы</p>
+        <div class="price-topics">
+          <div class="price-top">
+            <div class="price__list">
+              <div class="price">
+                <h3 class="price__heading">Женская стрижка</h3>
+                <p class="price__description">Короткие волосы</p>
+              </div>
+              <p class="price__coast">1200 ₽</p>
             </div>
-            <p class="price__coast">1200 ₽</p>
+            <div class="price__list">
+              <div class="price">
+                <h3 class="price__heading">Стрижка бороды и усов</h3>
+                <p class="price__description">Короткие волосы</p>
+              </div>
+              <p class="price__coast">1200 ₽</p>
+            </div>
           </div>
-          <div class="price__list">
-            <div class="price">
-              <h3 class="price__heading">Стрижка бороды и усов</h3>
-              <p class="price__description">Короткие волосы</p>
+          <div class="price-top">
+            <div class="price__list">
+              <div class="price">
+                <h3 class="price__heading">Мужская стрижка</h3>
+                <p class="price__description">Короткие волосы</p>
+              </div>
+              <p class="price__coast">1200 ₽</p>
             </div>
-            <p class="price__coast">1200 ₽</p>
+            <div class="price__list">
+              <div class="price">
+                <h3 class="price__heading">Экспресс укладка</h3>
+                <p class="price__description">Короткие волосы</p>
+              </div>
+              <p class="price__coast">1200 ₽</p>
+            </div>
           </div>
-        </div>
-        <div class="price-top">
-          <div class="price__list">
-            <div class="price">
-              <h3 class="price__heading">Мужская стрижка</h3>
-              <p class="price__description">Короткие волосы</p>
+          <div class="price-top">
+            <div class="price__list">
+              <div class="price">
+                <h3 class="price__heading">Детский Стиль</h3>
+                <p class="price__description">Короткие волосы</p>
+              </div>
+              <p class="price__coast">1200 ₽</p>
             </div>
-            <p class="price__coast">1200 ₽</p>
+            <div class="price__list">
+              <div class="price">
+                <h3 class="price__heading">Укладка дневная</h3>
+                <p class="price__description">Короткие волосы</p>
+              </div>
+              <p class="price__coast">1200 ₽</p>
+            </div>
           </div>
-          <div class="price__list">
-            <div class="price">
-              <h3 class="price__heading">Экспресс укладка</h3>
-              <p class="price__description">Короткие волосы</p>
+          <div class="price-top">
+            <div class="price__list">
+              <div class="price">
+                <h3 class="price__heading">Креативный Стиль</h3>
+                <p class="price__description">Короткие волосы</p>
+              </div>
+              <p class="price__coast">1200 ₽</p>
             </div>
-            <p class="price__coast">1200 ₽</p>
-          </div>
-        </div>
-        <div class="price-top">
-          <div class="price__list">
-            <div class="price">
-              <h3 class="price__heading">Детский Стиль</h3>
-              <p class="price__description">Короткие волосы</p>
+            <div class="price__list">
+              <div class="price">
+                <h3 class="price__heading">Прическа вечерняя (свадебная)
+                </h3>
+                <p class="price__description">Короткие волосы</p>
+              </div>
+              <p class="price__coast">3000 ₽</p>
             </div>
-            <p class="price__coast">1200 ₽</p>
-          </div>
-          <div class="price__list">
-            <div class="price">
-              <h3 class="price__heading">Укладка дневная</h3>
-              <p class="price__description">Короткие волосы</p>
-            </div>
-            <p class="price__coast">1200 ₽</p>
-          </div>
-        </div>
-        <div class="price-top">
-          <div class="price__list">
-            <div class="price">
-              <h3 class="price__heading">Креативный Стиль</h3>
-              <p class="price__description">Короткие волосы</p>
-            </div>
-            <p class="price__coast">1200 ₽</p>
-          </div>
-          <div class="price__list">
-            <div class="price">
-              <h3 class="price__heading">Прическа вечерняя (свадебная)
-              </h3>
-              <p class="price__description">Короткие волосы</p>
-            </div>
-            <p class="price__coast">3000 ₽</p>
           </div>
         </div>
       </div>
@@ -313,7 +327,7 @@
         <div class="masters__cards">
           <div class="card-master">
             <div class="masters__icon">
-              <img src="./images/Section/фото 1.png" alt="foto 1" />
+              <img class="masters-photo" src="./images/Section/фото 1.jpg" alt="foto 1" />
             </div>
 
             <h3 class="masters__heading">Краснова Ирина</h3>
@@ -326,7 +340,7 @@
           </div>
           <div class="card-master">
             <div class="masters__icon">
-              <img src="./images/Section/фото 2.png" alt="foto 2" />
+              <img class="masters-photo" src="./images/Section/фото 2.jpg" alt="foto 2" />
             </div>
 
             <h3 class="masters__heading">Калилова Жанна</h3>
@@ -339,7 +353,7 @@
           </div>
           <div class="card-master">
             <div class="masters__icon">
-              <img src="./images/Section/фото 3.png" alt="foto 3" />
+              <img class="masters-photo" src="./images/Section/фото 3.jpg" alt="foto 3" />
             </div>
 
             <h3 class="masters__heading">Киселева Алина</h3>
@@ -352,7 +366,7 @@
           </div>
           <div class="card-master">
             <div class="masters__icon">
-              <img src="./images/Section/фото 4.png" alt="foto 4" />
+              <img class="masters-photo" src="./images/Section/фото 4.jpg" alt="foto 4" />
             </div>
 
             <h3 class="masters__heading">Иванова Елена</h3>
@@ -365,6 +379,95 @@
           </div>
       </div>
     </section>
+    <section class="works">
+      <div class="container">
+        <div class="works__header">
+          <h1 class="works__header-name">Наши работы</h1>
+          <div class="works__paginator"> 
+            <div class="works__icon">
+              <img src="./images/Section/Group 31.svg" alt="icon6" />
+            </div>
+            <div class="works__icon">
+              <img src="./images/Section/Group 30.svg" alt="icon7" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="works__examples">
+        <div class="works__icon">
+          <img class="works-photo" src="./images/Section/пример 1.jpg" alt="foto 1" />
+        </div>
+        <div class="works__icon">
+          <img class="works-photo" src="./images/Section/пример 2.jpg" alt="foto 2" />
+        </div>
+        <div class="works__icon">
+          <img class="works-photo" src="./images/Section/пример 3.jpg" alt="foto 3" />
+        </div>
+        <div class="works__icon">
+          <img class="works-photo" src="./images/Section/пример 4.jpg" alt="foto 4" />
+        </div>
+      </div>
+    </section>
+<section class="brands">
+  <div class="container">
+    <h3 class="brands-text">Бренды, которые мы используем в работе</h3>
+    <div class="bands-list">
+      <div class="brands__slot">
+        <img class="brands-icon1" src="./images/Section/wella.png" alt="">
+      </div>
+      <div class="brands__slot">
+        <img class="brands-icon2" src="./images/Section/Schwarzcopf.png" alt="">
+      </div>
+      <div class="brands__slot">
+        <img class="brands-icon3" src="./images/Section/TIGI.png" alt="">
+      </div>
+      <div class="brands__slot">
+        <img class="brands-icon4" src="./images/Section/Londa.png" alt="">
+      </div>
+      <div class="brands__slot">
+        <img class="brands-icon5" src="./images/Section/Nioxin.png" alt="">
+      </div>
+    </div>
+  </div>
+</section>
+<section class="registration">
+<div class="container">
+<div class="registration-twopoint">
+<div class="registration-contacts">
+<h1 class="registration-header">Контакты</h1>
+<p class="registration-discription">
+  Томск, проспект Ленина, дом 13
+</p>
+<p class="registration-number">8 (499) 686-17-62</p>
+<a class="registration-link" href="info@more-krasoty.ru">info@more-krasoty.ru</a>
+<p class="registration-subdiscription">
+  Мы в социальных сетях
+</p>
+<div class="registration-social">
+  <img src="./images/Header/inst.png" alt="" />
+  <img src="./images/Header/vk.png" alt="" />
+  <img src="./images/Header/yt.png" alt="" />
+</div>
+</div>
+      <div class="reg-block">
+<h1 class="reg-header">Быстрая запись</h1>
+<p class="reg-discription">Наш менеджер перезвонит в течение нескольких минут, уточнит подробности и согласует время.
+</p>
+<div class="reg-input"> 
+  <input class="reg-name" type="text">
+  <label class="reg-labl" for="reg-name">Ваше имя</label>
+</div>
+<div class="reg-input">
+  <input class="reg-tel" type="tel">
+  <label class="reg-labl" for="reg-tel">+7 (___) ___-__-__</label>
+</div>
+<button class="btn btn_big">Записаться</button>
+<p class="reg-subdiscription">Нажимая на кнопку вы соглашаетесь с <a class="reg-personal" href="">обработкой персональных данных</a>
+</p>
+</div>
+</div>
+</div>
+</section>
     <footer>
       <div class="container">
         <div class="footer-frame">
@@ -384,7 +487,7 @@
                 <a href="" class="footer-link">Наши работы</a>
               </li>
               <li class="footer-item">
-                <a href="" class="navigation-link">Контакты</a>
+                <a href="" class="footer-link">Контакты</a>
               </li>
             </ul>
           </nav>
