--- a/src/index.html
+++ b/src/index.html
@@ -411,7 +411,7 @@
 <section class="brands">
   <div class="container">
     <h3 class="brands-text">Бренды, которые мы используем в работе</h3>
-    <div class="bands-list">
+    <div class="brands-list">
       <div class="brands__slot">
         <img class="brands-icon1" src="./images/Section/wella.png" alt="">
       </div>
